# gnn-sg

./: .gitignore  README.md  install_pytorch_geometric.sh  install_torch_scatter_sparse.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
markdown_docs/src/: comp_dataset_generator.md  model_nbf_fb.md  model_nbf_general.md  train.md  utils.md
markdown_docs/src/composition_tables/: baseclass.md  rcc8.md
markdown_docs/tests/: test_comp_datagen_correctness.md  test_nbf_model_mechanics.md  test_utils.md
src/: model_nbf_fb.py  train.py  utils.py
tests/: test_comp_datagen_correctness.py
