[tool.poetry]
name = "gnnsg"
version = "0.0.0"
description = "Graph Neural Networks For Systematic Generalisation"
authors = ["Irtaza Khalid <khalidmi@cardiff.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cnm13ryan/gnn-sg"
repository = "https://github.com/cnm13ryan/gnn-sg"
keywords = ["graph neural network", "link prediction", "systematic generalisation", "neurosymbolic", "theorem prover"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
triton = "2.3.1"
torch = "2.3.1"
torch_geometric = "2.5.3"
torchvision = "0.18.1"
torchaudio = "2.3.1"
numpy = "2.0.0"
hydra-core = "1.3.2"
wandb = "0.17.5"
pytest = "8.3.2"
lightning = "2.3.3"
transformers = "4.43.4"
matplotlib = "3.9.0"
regex = "2024.7.24"
setuptools = "72.1.0"
wheel = "0.44.0"
cython = "3.0.11"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
antlr4-python3-runtime = "4.9.3"
attrs = "24.2.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
contourpy = "1.2.1"
cryptography = "43.0.0"
cycler = "0.12.1"
distlib = "0.3.8"
docker-pycreds = "0.4.0"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gitdb = "4.0.11"
gitpython = "3.1.43"
huggingface-hub = "0.24.5"
idna = "3.7"
iniconfig = "2.0.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
keyring = "24.3.1"
kiwisolver = "1.4.5"
lightning-utilities = "0.11.6"
markupsafe = "2.1.5"
more-itertools = "10.3.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
networkx = "3.2.1"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.6.20"
nvidia-nvtx-cu12 = "12.1.105"
omegaconf = "2.3.0"
packaging = "24.1"
pexpect = "4.9.0"
pillow = "10.4.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.5.0"
protobuf = "5.27.3"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pyparsing = "3.1.2"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
pytorch-lightning = "2.3.3"
pyyaml = "6.0.1"
rapidfuzz = "3.9.5"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
safetensors = "0.4.4"
scikit-learn = "1.5.1"
scipy = "1.13.1"
secretstorage = "3.3.3"
sentry-sdk = "2.12.0"
setproctitle = "1.3.3"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sympy = "1.13.1"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
tomlkit = "0.13.0"
torch-scatter = "2.1.2"
torch-sparse = "0.6.18"
torchmetrics = "1.4.1"
tqdm = "4.66.5"
trove-classifiers = "2024.7.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
yarl = "1.9.4"

[tool.poetry.extras]
dev = ["check-manifest"]
in-square-brackets-test = ["wandb"]

[tool.poetry.scripts]
run = "src.train:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
